--- a/web/drlog-search.html
+++ b/web/drlog-search.html
@@ -525,7 +525,7 @@
             // Initialize default query items
             if (querysContainer.children.length === 0) {
                 createQueryItem('xxx content', 'simple');
-                createQueryItem('llEventLoop-7-4 OR xecutorLoop-5-2', 'boolean');
+                createQueryItem('A AND/OR/NOT B', 'boolean');
             }
             document.getElementById('add-query-btn').addEventListener('click', () => createQueryItem());
 
