--- a/web/drlog-search.html
+++ b/web/drlog-search.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/web/favicon.ico" type="image/x-icon">
     <title>DRLog Search - Log Query Tool</title>
     <style>
         /* CSS Styles */
@@ -313,7 +314,7 @@
         .log-content {
             padding: 5px 0 0 25px;
             overflow: hidden;
-            max-height: 10000px;
+            max-height: 100000px;
             transition: max-height 0.3s ease-in-out;
             white-space: pre-wrap;
             word-break: break-all;
